cli7z: Catch error from p7zip 9.20 when deleting files from APK archives

7z 9.20 does not seem to support deleting files from APK archives
(Android Application Packages) even though these are zip archives.

A new member function named readDeleteLine() was added to CliInterface.
The function is overridden in the cli7z plugin and catches the error
message from 7z when attempting to delete files.

BUG: 377421
FIXED-IN: 17.04.0
Differential Revision: D5011