kerfuffle/cliinterface.h
@@ -71,6 +71,7 @@ public:
     virtual void resetParsing() = 0;
     virtual bool readListLine(const QString &line) = 0;
     virtual bool readExtractLine(const QString &line) = 0;
+    virtual bool readDeleteLine(const QString &line);
     bool doKill() Q_DECL_OVERRIDE;
     bool doSuspend() Q_DECL_OVERRIDE;
     bool doResume() Q_DECL_OVERRIDE;
